# whx-cmake-project-template

./: CMakeLists.txt  config.h.in
src/: CMakeLists.txt
src/runShowPic/: CMakeLists.txt  runShowPic.cpp
